<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <Switch
            android:id="@+id/switch_notif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/notifications"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            tools:checked="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <Switch
            android:id="@+id/switch_sounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sounds"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            tools:checked="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <Button
        android:id="@+id/button_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/black"
        android:text="@string/sign_out" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
