<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.BubbleSheetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/exam_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/exam_title"
                android:maxLines="1"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/timer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/timer_zero"
                android:maxLines="1"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_margin" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/answer_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent">

                <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/vertical_margin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/answer_layout" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/vertical_margin_large" />

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>